--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/dzsoldado/express_crash#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
